fix nav item layout on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,12 @@ body {
     background-color: white;
 }
 
+@media (max-width:1200px) {
+    .navigation-menu {
+        font-size: small;
+    }
+}
+
 @media (max-width: 767px) {
     body {
         padding-top: 0px;
@@ -64,7 +70,7 @@ body {
         z-index: 20;
     }
 
-    .navigation-menu {
+    .navigation-menu:not(.navbar-right) {
         margin-left: 200px;
     }
 
